--- a/mock/Makefile
+++ b/mock/Makefile
@@ -5,7 +5,7 @@ LDFLAGS = -lm
 tcpClient: mock_drone_tcp_client.o tcp.o
 	$(CC) -o $@Mock $^ $(CFLAGS) $(LDFLAGS)
 
-tcpServer: mock_drone_tcp.o
+tcpServer: mock_drone_tcp_server.o
 	$(CC) -o $@Mock $^ $(CFLAGS) $(LDFLAGS)
 
 udp: mock_drone_tcp.o
